GreenbidsAnalyticsReporter: Add CPM, bidder params, UserAgent, PBS flag (#3282)